# inverted-index

./: .gitignore  Cargo.toml  README.md
inverted_index/src/: lib.rs  main.rs
inverted_index/src/index/: inverted.rs
inverted_index/src/tests/: mod.rs
src/: lib.rs  main.rs
src/index/: inverted.rs
